@@ -1,6 +1,7 @@
 
 #include "Texture.hpp"
 #include "pixmap.h"
+#include "config.hpp"
 #include "platform.h"
 
 using namespace std;
@@ -209,6 +210,11 @@ void Texture::init(RenderContext* renderContext)
   glGetIntegerv(GL_MAX_TEXTURE_SIZE,  &glTexSize );        
   unsigned int maxSize = static_cast<unsigned int>(glTexSize);
   
+  #ifdef MODERN_OPENGL
+  glTexImage2D(GL_TEXTURE_2D, 0, internalFormat, pixmap->width, pixmap->height, 0, format, gl_type , pixmap->data);
+  if (mipmap)
+    glGenerateMipmap(GL_TEXTURE_2D);
+  #else
   if (mipmap) {                  
     int gluError = gluBuild2DMipmaps(GL_TEXTURE_2D, internalFormat, pixmap->width, pixmap->height, format, gl_type, pixmap->data);    
     if (gluError)
@@ -232,7 +238,8 @@ void Texture::init(RenderContext* renderContext)
       glTexImage2D(GL_TEXTURE_2D, 0, internalFormat, pixmap->width, pixmap->height, 0, format, gl_type , pixmap->data);
     }
   }
-
+  #endif /* not MODERN_OPENGL */
+  
   if (envmap) {
     glTexGeni(GL_S, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
     glTexGeni(GL_T, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
