@@ -566,6 +566,8 @@ v0.93.999
     now call normalizePath() on filenames, so tilde expansion should
     be supported.
   - par3d() could generate an error if an unnamed list was passed in.
+  - material3d() lost settings for textures
+  - internals are updated to be consistent with MacOS 10.9 requirements
     
 v0.94
   - Added "subscenes", i.e. scenes of objects nested within the 
